<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
	<string name="ipod_album">Album</string>
	<string name="ipod_artist">Artist</string>
	<string name="ipod_song_name">Song Name</string>
    <string name="action_settings">Settings</string>
    <string name="btn_seek_string">刻度</string>
    <string name="btn_search_string">搜存</string>
    <string name="btn_eq_music_string">音乐厅</string>
    <string name="btn_eq_film_string">电影院</string>
    <string name="btn_eq_normal_string">标&#160;&#160;&#160;&#160;准</string>
    <string name="btn_bar_radio">收音机</string>
    <string name="btn_bar_btmusic">蓝牙音乐</string>
    <string name="btn_bar_ipod">IPOD</string>
    <string name="btn_bar_usb">U盘音乐</string>
    <string name="app_name">多媒体</string>
    <string name="main_favorited">已收藏</string>
    <string name="collect">收藏成功</string>
    <string name="canclecollect">取消收藏</string>
    <string name="peogress_no_channel">当前已无下一强信号台</string>
    <string name="peogress_no_channel1">当前已无上一强信号台</string>
    <string name="search">输入搜索</string>
    <string name="band1">本地</string>
    <string name="band2">远程</string>
    <string name="fm">FM</string>
    <string name="am">AM</string>
    <string name="st">ST</string>
    <string name="initfreq">87.5</string>
    <string name="amsign">KHz</string>
    <string name="fmsign">MHz</string>
    <string name="ensure">确定</string>
    <string name="cancle">取消</string>
    <string name="toast1">请输入正确的频道(522&#8211;1620)</string>
    <string name="toast2">请输入正确的频道(87.5&#8211;108.0)</string>
    <string name="toast3">输入有误</string>
    <string name="toast4">请输入频道</string>
    <string name="nochennel">没有电台记录</string>
    <string name="ensuredelete">请确认是否移除频道？</string>
    <string name="ensureadd">请确认是否收藏频道？</string>
    <string name="initchann">正在搜索频道,请稍等&#8230;</string>
    <string name="listdialognone">无频道</string>
    <string name="singlesave0">已成功存台</string>
    <string name="singlesave1">还在为您保存上一个，请稍等</string>
    <string name="singlesave2">这个台已经存过了</string>
    <string name="singlesavedialogtext">请确认是否保存当前频道</string>
    <string name="_switch">波段切换</string>
    <string name="update">波段切换</string>
    <string name="preview">频道预览</string>
    <string name="title_activity_usb_music">USB</string>
    <string name="txt_usb">USB</string>
    <string name="txt_music">音频</string>
    <string name="txt_video">视频</string>
    <string name="txt_picture">图片</string>
    <string name="txt_btmusic">蓝牙音乐</string>
    <string name="txt_ipod">IPOD</string>
    <string name="device_status">USB未连接</string>
    <string name="txt_song">See You Again</string>
    <string name="txt_singer">wiz</string>
    <string name="txt_album">Now That Is What I Call</string>
    <string name="folder">文件夹</string>
    <string name="title_activity_usb_music_main">UsbMusicMain</string>
    <string name="title_activity_usb_music_main_fragment">UsbMusicMainFragment</string>
    <string name="title_activity_usb_folder_fragment">UsbFolderFragment</string>
    <string name="title_activity_usb_picture">UsbPictureActivity</string>
    <string name="title_activity_usb_vedio">UsbVedioActivity</string>

</resources>
