<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/usb_music_main_layout"
            android:layout_width="wrap_content"
            android:layout_height="497dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/bg_media_shading"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="100dp"
                    android:text="@string/txt_song"
                    android:textColor="@color/text_light"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/txt_singer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_singer"
                    android:textColor="@color/text_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txt_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_album"
                    android:textColor="@color/text_light"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/video_control_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:paddingEnd="50dip"
                android:paddingStart="50dip" >

                <TextView
                    android:id="@+id/video_curtime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="100"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/video_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="835"
                    android:maxHeight="10dp"
                    android:minHeight="10dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/seekbar_thumb"
                    android:thumbOffset="15dp" />

                <TextView
                    android:id="@+id/video_alltime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="100"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/video_control_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp" >

                <Button
                    android:id="@+id/btn_loop_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="150dp"
                    android:background="@drawable/single_cycle" />

                <ImageView
                    android:id="@+id/video_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="50dp"
                    android:layout_toLeftOf="@+id/video_play"
                    android:contentDescription="@null"
                    android:src="@drawable/btn_music_pre" />

                <ImageView
                    android:id="@+id/video_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/btn_music_play" />

                <ImageView
                    android:id="@+id/video_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/video_play"
                    android:contentDescription="@null"
                    android:src="@drawable/btn_music_next" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_media_bottom_bar" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:background="@drawable/btn_back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/bottom_bar_dividing_line" />

            <RelativeLayout
                android:id="@+id/btn_folder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/img_folder_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="400dp"
                    android:contentDescription="@null"
                    android:src="@drawable/img_folder_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/folder"
                    android:textColor="@color/white"
                    android:textSize="28sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/img_interval_line" />

    <ListView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >
    </ListView>

</LinearLayout>